[package]
edition = "2021"
license = "MIT"
name = "mopad"
version = "0.1.0"

[dependencies]
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = {version = "0.7.1", features = ["json", "query", "ws"]}
clap = { version = "4.4.10", features = ["derive"] }
eyre = "0.6.8"
futures-util = "0.3.29"
rand_core = {version = "0.6.4", features = ["std"]}
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.85"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "sqlite"]}
time = {version = "0.3.14", features = ["formatting"]}
tokio = {version = "1.26.0", features = ["full"]}
tower-http = {version = "0.5.0", features = ["fs"]}
tower-service = "0.3.2"
