[package]
edition = "2021"
license = "MIT"
name = "mopad"
version = "0.2.0"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["json", "query", "ws"] }
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
